Sub-map river code refactoring